# GetGeneLength

./: README.md  setup.cfg
src/GetGeneLength/: GetGeneLength.py  GetGeneLength_v3.py
