[metadata]
name = GetGeneLength
version = 0.0.2
author = laojunjun
author_email = 3219030654@stu.cpu.edu.cn
description = Extract gene length based on featureCount calculation gene nonredundant exon length method.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/junjunlab/GetGeneLength
project_urls =
    Bug Tracker = https://github.com/junjunlab/GetGeneLength/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    GetGeneLength = GetGeneLength.GetGeneLength:main